--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="assests/css/style.css" /> -->
-    <title>Kafka Wanna Fly's Profile</title>
   </head>
   <body>
     <div
@@ -13,7 +12,6 @@
         background: url('/assests/img/triangle.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
-
         padding: 0 0 20px 0;
       "
     >
@@ -32,12 +30,10 @@
         class="status-card-container"
         style="
           margin-top: 20px;
-
-          padding-left: 20px;
-          padding-right: 20px;
-
+          padding-left: 10vw;
+          padding-right: 10vw;
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
           justify-content: space-evenly;
         "
       >
@@ -46,14 +42,14 @@
           class="status-card"
           src="https://github-readme-stats.vercel.app/api?username=tarzanchemgio&count_private=true&show_icons=true&theme=dracula&border_radius=8&include_all_commits=true&custom_title=Kafka Wanna Fly"
           alt="Profile stats"
-          style="height: 15vw"
+          style="flex: 1"
         />
         <img
           id="git-language"
           class="status-card"
           src="https://github-readme-stats.vercel.app/api/top-langs/?username=tarzanchemgio&layout=compact&theme=dracula"
           alt="Top language"
-          style="height: 15vw"
+          style="flex: 1; margin-top: 20px"
         />
       </div>
     </div>
