--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           padding-left: 10vw;
           padding-right: 10vw;
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
           justify-content: space-evenly;
         "
         align="center"
